hphp/hack/test/typecheck/compile_test_static.php.exp
File "compile_test_static.php", line 13, characters 10-11:
Expected ; (Parsing[1002])
